@@ -74,6 +74,7 @@ struct Entity_Familiar depends (ColorMod, ItemConfig_Item) : public Entity {
 	bool _isFollower : 0xcc4;
 	bool _isDelayed : 0xcc5;
 	int _state : 0xcd4;
+	bool _isLilDelirium : 0xd00;
 	ItemConfig_Item* _item : 0xe20;
 	ColorMod _dirtColor : 0xe28;
 	int _wispCollectibleType : 0xe54;
