@@ -1088,6 +1088,143 @@ void ASMPatchPrePlayerGiveBirth() {
 	PreBirthPatch(immaculateAddr, false);  // Immaculate
 }
 
+bool __stdcall RunPreTriggerBedSleepEffectCallback(Entity_Pickup* bed) {
+	const int callbackid = 1285;
+	Entity_Player* player = bed->_target->ToPlayer();
+
+		if (CallbackState.test(callbackid - 1000) && player) {
+			lua_State* L = g_LuaEngine->_state;
+			lua::LuaStackProtector protector(L);
+			lua_rawgeti(L, LUA_REGISTRYINDEX, g_LuaEngine->runCallbackRegistry->key);
+
+			lua::LuaResults result = lua::LuaCaller(L).push(callbackid)
+				.push(bed, lua::Metatables::ENTITY_PICKUP)
+				.push(player, lua::Metatables::ENTITY_PLAYER)
+				.push(bed, lua::Metatables::ENTITY_PICKUP)
+				.call(1);
+
+
+			if (!result) {
+				if (lua_isboolean(L, -1)) {
+					return (bool)lua_toboolean(L, -1);
+				}
+			}
+		}
+	
+	return false;
+}
+
+void ASMPatchPreTriggerBedSleepEffect() {
+	ASMPatch::SavedRegisters savedRegisters(ASMPatch::SavedRegisters::Registers::GP_REGISTERS, true);
+	ASMPatch patch;
+
+	SigScan scanner_transition("8bb0????????85f674??837e??0174");
+	scanner_transition.Scan();
+	void* addr = scanner_transition.GetAddress();
+	printf("[REPENTOGON] Patching ItemOverlay::Update at %p for PreTriggerBedSleepEffect callback\n", addr);
+
+	patch.PreserveRegisters(savedRegisters)
+		.Push(ASMPatch::Registers::EAX) // Bed
+		.AddInternalCall(RunPreTriggerBedSleepEffectCallback)
+		.AddBytes("\x84\xC0") // test al, al
+		.RestoreRegisters(savedRegisters)
+		.AddConditionalRelativeJump(ASMPatcher::CondJumps::JNE, (char*)addr + 0x40) // Skipping hearts gain
+		.AddBytes(ByteBuffer().AddAny((char*)addr, 0x6))  // Restore the commands we overwrote
+		.AddRelativeJump((char*)addr + 0x6);
+	sASMPatcher.PatchAt(addr, &patch);
+}
+
+void __stdcall RunPostTriggerBedSleepEffectCallback(Entity_Pickup* bed) {
+	const int callbackid = 1286;
+
+	if (CallbackState.test(callbackid - 1000)) {
+		lua_State* L = g_LuaEngine->_state;
+		lua::LuaStackProtector protector(L);
+		lua_rawgeti(L, LUA_REGISTRYINDEX, g_LuaEngine->runCallbackRegistry->key);
+
+		lua::LuaCaller(L).push(callbackid)
+			.push(bed, lua::Metatables::ENTITY_PICKUP)
+			.push(bed->_target, lua::Metatables::ENTITY_PLAYER)
+			.push(bed, lua::Metatables::ENTITY_PICKUP)
+			.call(1);
+
+	}
+}
+
+void ASMPatchPostTriggerBedSleepEffect() {
+	ASMPatch::SavedRegisters savedRegisters(ASMPatch::SavedRegisters::Registers::GP_REGISTERS, true);
+	ASMPatch patch;
+
+	SigScan scanner_transition("81c61c0300008b0e");
+	scanner_transition.Scan();
+	void* addr = scanner_transition.GetAddress();
+	printf("[REPENTOGON] Patching ItemOverlay::Update at %p for PostBedSleep callback\n", addr);
+
+	patch.PreserveRegisters(savedRegisters)
+		.Push(ASMPatch::Registers::ESI) // Bed
+		//.Push(ASMPatch::Registers::ECX) // Player
+		.AddInternalCall(RunPostTriggerBedSleepEffectCallback)
+		.AddBytes("\x84\xC0") // test al, al
+		.RestoreRegisters(savedRegisters)
+		.AddBytes(ByteBuffer().AddAny((char*)addr, 0x6))  // Restore the commands we overwrote
+		.AddRelativeJump((char*)addr + 0x6);
+	sASMPatcher.PatchAt(addr, &patch);
+}
+
+bool __stdcall RunPreBedSleepCallback(Entity_Player* player, Entity_Pickup* bed) {
+	const int callbackid = 1288;
+
+	if (CallbackState.test(callbackid - 1000)) {
+		lua_State* L = g_LuaEngine->_state;
+		lua::LuaStackProtector protector(L);
+		lua_rawgeti(L, LUA_REGISTRYINDEX, g_LuaEngine->runCallbackRegistry->key);
+
+		lua::LuaResults result = lua::LuaCaller(L).push(callbackid)
+			.push(bed, lua::Metatables::ENTITY_PICKUP)
+			.push(player, lua::Metatables::ENTITY_PLAYER)
+			.push(bed, lua::Metatables::ENTITY_PICKUP)
+			.call(1);
+
+
+		if (!result) {
+			if (lua_isboolean(L, -1)) {
+				return (bool)lua_toboolean(L, -1);
+			}
+		}
+	}
+
+	return false;
+
+}
+
+void ASMPatchPreBedSleep() {
+	ASMPatch::SavedRegisters savedRegisters(ASMPatch::SavedRegisters::Registers::GP_REGISTERS, true);
+	ASMPatch patch;
+
+	SigScan scanner_transition("8bcfe8????????85c07e??8bcfe8????????84c0");
+	scanner_transition.Scan();
+	void* addr = scanner_transition.GetAddress();
+	printf("[REPENTOGON] Patching Entity_Pickup::handle_collision at %p for PreBedSleep callback\n", addr);
+
+	patch.PreserveRegisters(savedRegisters)
+		.Push(ASMPatch::Registers::ESI) // Bed
+		.Push(ASMPatch::Registers::EDI) // Player
+		.AddInternalCall(RunPreBedSleepCallback)
+		.AddBytes("\x84\xC0") // test al, al
+		.RestoreRegisters(savedRegisters)
+		.AddConditionalRelativeJump(ASMPatcher::CondJumps::JNE, (char*)addr + 0x44C) // Skipping player's hearts check
+		.AddBytes(ByteBuffer().AddAny((char*)addr, 0x2))  // Restore mov ecx, edi
+		.AddInternalCall(((char*)addr + 0x7) + *(ptrdiff_t*)((char*)addr + 0x3)) // restore the function call
+		.AddRelativeJump((char*)addr + 0x7);
+	sASMPatcher.PatchAt(addr, &patch);
+}
+
+void ASMPatchesBedCallbacks() {
+	ASMPatchPreTriggerBedSleepEffect();
+	ASMPatchPostTriggerBedSleepEffect();
+	ASMPatchPreBedSleep();
+}
+
 //MC_PRE_PLAYER_POCKET_ITEM_SWAP(1287)
 bool __stdcall RunPrePlayerPocketItemSwapCallback(Entity_Player* player) {
 	const int callbackid = 1287;
