@@ -229,7 +229,10 @@ ModCallbacks.MC_PRE_PLAYER_REMOVE_COSTUME = 1282
 ModCallbacks.MC_POST_PLAYER_ADD_COSTUME = 1283
 ModCallbacks.MC_POST_PLAYER_REMOVE_COSTUME = 1284
 
+ModCallbacks.MC_PRE_TRIGGER_BED_SLEEP_EFFECT = 1285
+ModCallbacks.MC_POST_TRIGGER_BED_SLEEP_EFFECT = 1286
 ModCallbacks.MC_PRE_PLAYER_POCKET_ITEMS_SWAP = 1287
+ModCallbacks.MC_PRE_BED_SLEEP = 1288
 
 ModCallbacks.MC_PRE_GET_RANDOM_ROOM_INDEX = 1290
 
